--- a/clusters/main/kubernetes/core/traefik/app/helm-release.yaml
+++ b/clusters/main/kubernetes/core/traefik/app/helm-release.yaml
@@ -42,6 +42,16 @@ spec:
         metallb.universe.tf/ip-allocated-from-pool: main
       spec:
         externalTrafficPolicy: Local
+      ports:
+        web:
+          enabled: true
+          port: 80
+          protocol: http
+          redirectTo: websecure
+        websecure:
+          enabled: true
+          port: 443
+          protocol: https
     logs:
       general:
         level: DEBUG
