--- a/clusters/main/kubernetes/core/kustomization.yaml
+++ b/clusters/main/kubernetes/core/kustomization.yaml
@@ -6,6 +6,6 @@ resources:
   - kyverno-policies/ks.yaml
   - metallb-config/ks.yaml
   - system-upgrade-controller-plans/ks.yaml
-  #- traefik/ks.yaml
+  - traefik/ks.yaml
   - cloudflared/ks.yaml
   - crowdsec/ks.yaml
