--- a/clusters/main/talos/talconfig.yaml
+++ b/clusters/main/talos/talconfig.yaml
@@ -74,6 +74,8 @@ controlPlane:
           discard_unpacked_layers = false
         [plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runc]
           discard_unpacked_layers = false
+        [plugins."io.containerd.cri.v1.images"]
+          discard_unpacked_layers = false
       permissions: 0
       path: /etc/cri/conf.d/20-customization.part
       op: create
@@ -81,11 +83,8 @@ controlPlane:
         [ NFSMount_Global_Options ]
         nfsvers=4.2
         hard=True
+        nconnect=16
         noatime=True
-        nodiratime=True
-        rsize=131072
-        wsize=131072
-        nconnect=8
       permissions: 420
       path: /etc/nfsmount.conf
       op: overwrite
@@ -122,6 +121,8 @@ worker:
           discard_unpacked_layers = false
         [plugins."io.containerd.grpc.v1.cri".containerd.runtimes.runc]
           discard_unpacked_layers = false
+        [plugins."io.containerd.cri.v1.images"]
+          discard_unpacked_layers = false
       permissions: 0
       path: /etc/cri/conf.d/20-customization.part
       op: create
@@ -129,11 +130,8 @@ worker:
         [ NFSMount_Global_Options ]
         nfsvers=4.2
         hard=True
+        nconnect=16
         noatime=True
-        nodiratime=True
-        rsize=131072
-        wsize=131072
-        nconnect=8
       permissions: 420
       path: /etc/nfsmount.conf
       op: overwrite
