--- a/clusters/main/kubernetes/networking/kustomization.yaml
+++ b/clusters/main/kubernetes/networking/kustomization.yaml
@@ -3,3 +3,11 @@ kind: Kustomization
 resources:
   - nginx-external/ks.yaml
   - nginx-internal/ks.yaml
+  - namespace.yaml
+  - homeassistant/ks.yaml
+  - homebridge/ks.yaml
+  - homepage/ks.yaml
+  - minio/ks.yaml
+  - pihole/ks.yaml
+  - proxmox/ks.yaml
+  - truenas/ks.yaml
