--- a/clusters/main/kubernetes/apps/media/sabnzbd/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/sabnzbd/app/helm-release.yaml
@@ -57,7 +57,7 @@ spec:
                         name: SabNZBD
                         widget:
                             custom:
-                                url: ${SABNZBD_IP}:10097
+                                url: http://192.168.10.190:10097
                                 key: t9t500obl7q793q1nse3jftag6xx2347
                             enabled: true
 
