--- a/clusters/main/kubernetes/kube-system/cilium/app/helm-release.yaml
+++ b/clusters/main/kubernetes/kube-system/cilium/app/helm-release.yaml
@@ -34,8 +34,8 @@ spec:
     uninstall:
         keepHistory: false
     values:
-      # autoDirectNodeRoutes: true
-      # routingMode: native
+      autoDirectNodeRoutes: true
+      routingMode: native
       hubble:
         enabled: false
       cluster:
