--- a/clusters/main/kubernetes/networking/nginx-internal/app/helm-release.yaml
+++ b/clusters/main/kubernetes/networking/nginx-internal/app/helm-release.yaml
@@ -66,12 +66,12 @@ spec:
         use-forwarded-headers: "true"
       metrics:
         enabled: true
-        # serviceMonitor:
-        #   enabled: true
-        #   namespaceSelector:
-        #     any: true
+        serviceMonitor:
+          enabled: true
+          namespaceSelector:
+            any: true
       extraArgs:
-        default-ssl-certificate: "clusterissuer/certificate-issuer-domain-0-wildcard"
+        default-ssl-certificate: "clusterissuer/certificate-issuer-wethecommon-wildcard-cert"
         publish-status-address: ${NGINX_INTERNAL_IP}
       terminationGracePeriodSeconds: 120
       publishService:
