--- a/repositories/oci/ingress-nginx.yaml
+++ b/repositories/oci/ingress-nginx.yaml
@@ -6,7 +6,6 @@ metadata:
   name: ingress-nginx
   namespace: flux-system
 spec:
-  ## TODO: move to OCI
-  # type: oci
+  type: oci
   interval: 5m
-  url: https://kubernetes.github.io/ingress-nginx
+  url: oci://kubernetes.github.io/ingress-nginx
