--- a/repositories/helm/kustomization.yaml
+++ b/repositories/helm/kustomization.yaml
@@ -30,4 +30,6 @@ resources:
   - truecharts.yaml
   - crowdsec.yaml
   - nvdp.yaml
+  - ingress-nginx.yaml
+  - home-ops-mirror.yaml
 # more goes here!
