--- a/repositories/helm/ingress-nginx.yaml
+++ b/repositories/helm/ingress-nginx.yaml
@@ -9,4 +9,4 @@ spec:
   ## TODO: move to OCI
   # type: oci
   interval: 5m
-  url: https://kubernetes.github.io/ingress-nginx
+  url: 'https://kubernetes.github.io/ingress-nginx'
