--- a/clusters/main/kubernetes/networking/homebridge/app/helm-release.yaml
+++ b/clusters/main/kubernetes/networking/homebridge/app/helm-release.yaml
@@ -18,6 +18,7 @@ spec:
     ingress:
       main:
         enabled: true
+        ingressClassName: internal
         hosts:
           - host: homebridge.${BASE_DOMAIN}
             paths:
