--- a/clusters/main/kubernetes/networking/proxmox/app/helm-release.yaml
+++ b/clusters/main/kubernetes/networking/proxmox/app/helm-release.yaml
@@ -20,6 +20,7 @@ spec:
         ingress:
             main:
                 enabled: true
+                ingressClassName: internal
                 hosts:
                     - host: proxmox.${BASE_DOMAIN}
                       paths:
