--- a/clusters/main/kubernetes/networking/truenas/app/helm-release.yaml
+++ b/clusters/main/kubernetes/networking/truenas/app/helm-release.yaml
@@ -19,7 +19,8 @@ spec:
     values:
         ingress:
             main:
-                enabled: true
+                enabled: 
+                ingressClassName: internal
                 hosts:
                     - host: truenas.${BASE_DOMAIN}
                       paths:
