--- a/clusters/main/kubernetes/networking/pihole/app/helm-release.yaml
+++ b/clusters/main/kubernetes/networking/pihole/app/helm-release.yaml
@@ -20,6 +20,7 @@ spec:
         ingress:
             main:
                 enabled: true
+                ingressClassName: internal
                 integrations:
                     traefik:
                         enabled: true
