--- a/clusters/main/kubernetes/apps/media/overseerr/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/overseerr/app/helm-release.yaml
@@ -30,6 +30,7 @@ spec:
         ingress:
             main:
                 enabled: true
+                ingressClassName: external
                 integrations:
                     traefik:
                         enabled: true
