--- a/clusters/main/kubernetes/apps/media/emby/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/emby/app/helm-release.yaml
@@ -29,6 +29,7 @@ spec:
         ingress:
             main:
                 enabled: true
+                ingressClassName: internal
                 integrations:
                     traefik:
                         enabled: true
