--- a/clusters/main/kubernetes/apps/media/lidarr/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/lidarr/app/helm-release.yaml
@@ -58,6 +58,7 @@ spec:
         ingress:
             main:
                 enabled: true
+                ingressClassName: internal
                 integrations:
                     traefik:
                         enabled: true
