--- a/clusters/main/kubernetes/apps/media/plex/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/plex/app/helm-release.yaml
@@ -43,6 +43,7 @@ spec:
         ingress:
             main:
                 enabled: true
+                ingressClassName: internal
                 integrations:
                     traefik:
                         enabled: true
