--- a/clusters/main/kubernetes/apps/media/prowlarr/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/prowlarr/app/helm-release.yaml
@@ -18,7 +18,8 @@ spec:
     values:
         ingress:
             main:
-                enabled: true   
+                enabled: true
+                ingressClassName: internal   
                 hosts:
                     - host: prowlarr.${BASE_DOMAIN}
                       paths:
