--- a/clusters/main/kubernetes/apps/media/roon/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/roon/app/helm-release.yaml
@@ -20,6 +20,7 @@ spec:
         ingress:
             main:
                 enabled: true
+                ingressClassName: internal
                 hosts:
                     - host: roon.${BASE_DOMAIN}
                       paths:
