--- a/clusters/main/kubernetes/apps/media/tinymediamanager/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/tinymediamanager/app/helm-release.yaml
@@ -29,7 +29,9 @@ spec:
         ingress:
             main:
                 enabled: true
+                ingressClassName: internal
                 integrations:
+                
                     traefik:
                         enabled: true
                         middlewares:
