--- a/clusters/main/kubernetes/networking/truenas/app/helm-release.yaml
+++ b/clusters/main/kubernetes/networking/truenas/app/helm-release.yaml
@@ -19,7 +19,7 @@ spec:
     values:
         ingress:
             main:
-                enabled: 
+                enabled: true
                 ingressClassName: internal
                 hosts:
                     - host: truenas.${BASE_DOMAIN}
