--- a/clusters/main/kubernetes/networking/truenas/app/helm-release.yaml
+++ b/clusters/main/kubernetes/networking/truenas/app/helm-release.yaml
@@ -32,7 +32,7 @@ spec:
 #                    secretName: truenas-tls
                 integrations:
                     traefik:
-                        enabled: true
+                        enabled: false
                         middlewares:
                             - name: local
                               namespace: traefik
