--- a/clusters/main/kubernetes/networking/homepage/app/helm-release.yaml
+++ b/clusters/main/kubernetes/networking/homepage/app/helm-release.yaml
@@ -39,7 +39,7 @@ spec:
                 ingressClassName: internal
                 integrations:
                     traefik:
-                        enabled: true
+                        enabled: false
                         middlewares:
                             - name: local
                               namespace: traefik
