--- a/clusters/main/kubernetes/apps/home/tandoor-recipes/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/home/tandoor-recipes/app/helm-release.yaml
@@ -31,7 +31,7 @@ spec:
         ingressClassName: internal
         integrations:
           traefik:
-            enabled: true
+            enabled: false
             middlewares:
              - name: local
                namespace: traefik
