--- a/clusters/main/kubernetes/apps/media/tinymediamanager/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/tinymediamanager/app/helm-release.yaml
@@ -33,7 +33,7 @@ spec:
                 integrations:
                 
                     traefik:
-                        enabled: true
+                        enabled: false
                         middlewares:
                          - name: local
                            namespace: traefik
