--- a/clusters/main/kubernetes/apps/media/dizquetv/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/dizquetv/app/helm-release.yaml
@@ -32,7 +32,7 @@ spec:
                 ingressClassName: internal
                 integrations:
                     traefik:
-                        enabled: true
+                        enabled: false
                         middlewares:
                          - name: local
                            namespace: traefik
