--- a/clusters/main/kubernetes/apps/media/nzbget/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/nzbget/app/helm-release.yaml
@@ -38,7 +38,7 @@ spec:
                           pathType: Prefix
                 integrations:
                     traefik:
-                        enabled: true
+                        enabled: false
                         middlewares:
                          - name: local
                            namespace: traefik
