--- a/clusters/main/kubernetes/apps/media/radarr/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/radarr/app/helm-release.yaml
@@ -72,7 +72,7 @@ spec:
         ingressClassName: internal
         integrations:
           traefik:
-            enabled: true
+            enabled: false
             middlewares:
             - name: local
               namespace: traefik
