--- a/clusters/main/kubernetes/apps/media/sabnzbd/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/sabnzbd/app/helm-release.yaml
@@ -43,7 +43,7 @@ spec:
                 ingressClassName: internal
                 integrations:
                     traefik:
-                        enabled: true
+                        enabled: false
                         middlewares:
                          - name: local
                            namespace: traefik
