--- a/clusters/main/kubernetes/apps/media/overseerr/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/overseerr/app/helm-release.yaml
@@ -30,7 +30,7 @@ spec:
         ingress:
             main:
                 enabled: true
-                ingressClassName: external
+                ingressClassName: internal
                 integrations:
                     traefik:
                         enabled: false
