--- a/clusters/main/kubernetes/networking/proxmox/app/helm-release.yaml
+++ b/clusters/main/kubernetes/networking/proxmox/app/helm-release.yaml
@@ -26,7 +26,7 @@ spec:
                     main:
                         enabled: true
                         port: 8006
-                        protocol: http
+                        protocol: https
         ingress:
             main:
                 enabled: true
@@ -36,10 +36,6 @@ spec:
                       paths:
                         - path: /
                           pathType: Prefix
-#                tls:
-#                    hosts:
-#                        - proxmox.${BASE_DOMAIN}
-#                    secretName: proxmox-tls
                 integrations:
                     traefik:
                         enabled: false
