--- a/clusters/main/kubernetes/networking/truenas/app/helm-release.yaml
+++ b/clusters/main/kubernetes/networking/truenas/app/helm-release.yaml
@@ -1,5 +1,5 @@
 ---
-# yaml-language-server: $schema=https://kubernetes-schemas.zinn.ca/helm.toolkit.fluxcd.io/helmrelease_v2beta1.json
+# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -25,8 +25,8 @@ spec:
                 ports:
                     main:
                         enabled: true
-                        protocol: https
-                        port: 444
+                        protocol: http
+                        port: 80
         ingress:
             main:
                 enabled: true
