--- a/clusters/main/kubernetes/apps/media/roon/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/roon/app/helm-release.yaml
@@ -19,7 +19,7 @@ spec:
     values:
         ingress:
             main:
-                enabled: enable
+                enabled: true
                 ingressClassName: internal
                 hosts:
                     - host: roon.${BASE_DOMAIN}
