--- a/clusters/main/kubernetes/networking/truenas/app/helm-release.yaml
+++ b/clusters/main/kubernetes/networking/truenas/app/helm-release.yaml
@@ -25,8 +25,8 @@ spec:
                 ports:
                     main:
                         enabled: true
-                        protocol: http
-                        port: 81
+                        protocol: https
+                        port: 444
         ingress:
             main:
                 enabled: true
