--- a/clusters/main/kubernetes/networking/nginx-external/app/helm-release.yaml
+++ b/clusters/main/kubernetes/networking/nginx-external/app/helm-release.yaml
@@ -35,7 +35,7 @@ spec:
         externalTrafficPolicy: Local
         annotations:
           # TODO: Maybe play with this
-          # internal-dns.alpha.kubernetes.io/hostname: external.${DOMAIN_0}
+          internal-dns.alpha.kubernetes.io/hostname: external.${DOMAIN_0}
           metallb.io/ip-allocated-from-pool: main
           metallb.io/loadBalancerIPs: ${NGINX_EXTERNAL_IP}
           lbipam.cilium.io/ips: ${NGINX_EXTERNAL_IP}
