--- a/clusters/main/kubernetes/networking/nginx-internal/app/helm-release.yaml
+++ b/clusters/main/kubernetes/networking/nginx-internal/app/helm-release.yaml
@@ -35,10 +35,9 @@ spec:
         externalTrafficPolicy: Local
         annotations:
           # TODO: Maybe play with this
-          # internal-dns.alpha.kubernetes.io/hostname: internal.${DOMAIN_0}
+          internal-dns.alpha.kubernetes.io/hostname: internal.${DOMAIN_0}
           metallb.io/ip-allocated-from-pool: main
           metallb.io/loadBalancerIPs: ${NGINX_INTERNAL_IP}
-          metallb.universe.tf/ip-allocated-from-pool: main
           "lbipam.cilium.io/ips": ${NGINX_INTERNAL_IP}
       ingressClassByName: true
       watchIngressWithoutClass: true
