--- a/clusters/main/kubernetes/networking/nginx-internal/app/helm-release.yaml
+++ b/clusters/main/kubernetes/networking/nginx-internal/app/helm-release.yaml
@@ -39,6 +39,7 @@ spec:
           metallb.io/ip-allocated-from-pool: main
           metallb.io/loadBalancerIPs: ${NGINX_INTERNAL_IP}
           "lbipam.cilium.io/ips": ${NGINX_INTERNAL_IP}
+          nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
       ingressClassByName: true
       watchIngressWithoutClass: true
       ingressClassResource:
