--- a/clusters/main/kubernetes/kube-system/nvidia-gpu-operator/app/time-slicing-config-all.yaml
+++ b/clusters/main/kubernetes/kube-system/nvidia-gpu-operator/app/time-slicing-config-all.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: time-slicing-config-all
-  namespace: '*'
+  namespace: nvidida-device-plugin
 data:
   any: |-
     version: v1
