--- a/clusters/main/kubernetes/kube-system/kustomization.yaml
+++ b/clusters/main/kubernetes/kube-system/kustomization.yaml
@@ -10,4 +10,4 @@ resources:
   - intel-device-plugins/ks.yaml
   - kubeapps/ks.yaml
   - nvidia-device-plugin/ks.yaml
-  - nvidia-gpu-operator/ks.yaml
+  # - nvidia-gpu-operator/ks.yaml
