--- a/clusters/main/kubernetes/kube-system/nvidia-device-plugin/app/helm-release.yaml
+++ b/clusters/main/kubernetes/kube-system/nvidia-device-plugin/app/helm-release.yaml
@@ -12,7 +12,7 @@ spec:
             version:  0.17.1
             sourceRef:
                 kind: HelmRepository
-                name: nvdp
+                name: home-ops-mirror
                 namespace: flux-system
             interval: 5m
     install:
@@ -27,7 +27,7 @@ spec:
     values:
       image:
         repository: nvcr.io/nvidia/k8s-device-plugin
-        tag: v0.17.1
+        tag: v0.17.0
       runtimeClassName: nvidia
       config:
         map:
