--- a/clusters/main/kubernetes/kube-system/nvidia-gpu-operator/app/kustomization.yaml
+++ b/clusters/main/kubernetes/kube-system/nvidia-gpu-operator/app/kustomization.yaml
@@ -4,4 +4,4 @@ resources:
   - runtime.yaml
   - namespace.yaml
   - helm-release.yaml
-  - time-slicing-config-all.yaml
+  # - time-slicing-config-all.yaml
