--- a/clusters/main/kubernetes/apps/media/tautulli/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/media/tautulli/app/helm-release.yaml
@@ -65,5 +65,5 @@ spec:
             dest:
               enabled: true
             src:
-              enabled: true
+              enabled: false
 
