--- a/clusters/main/kubernetes/system/kubernetes-reflector/app/helm-release.yaml
+++ b/clusters/main/kubernetes/system/kubernetes-reflector/app/helm-release.yaml
@@ -29,3 +29,6 @@ spec:
       retries: 3
   uninstall:
     keepHistory: false
+  values:
+    securityContext:
+      readOnlyRootFilesystem: false
