--- a/clusters/main/kubernetes/flux-system/flux/kustomization.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/kustomization.yaml
@@ -8,4 +8,5 @@ resources:
   - ./flux.yaml
   - ./upgradesettings.yaml
   - ./namespace.yaml
-  # - sopssecret.secret.yaml
+
+  - sopssecret.secret.yaml
