--- a/clusters/main/kubernetes/networking/homepage/app/helm-release.yaml
+++ b/clusters/main/kubernetes/networking/homepage/app/helm-release.yaml
@@ -160,7 +160,7 @@ spec:
                             certificateIssuer: wethecommon-prod-cert
                             enabled: true
                         traefik:
-                            enabled: true
+                            enabled: false
                             middlewares:
                                 - name: local
                                   namespace: traefik
